--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "version",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+	"version": "npm run build && git add -A dist",
+	"postversion": "git push && git push --tags",
+    "build": "browserify index.js -p [bannerify --file ./banner.txt] > bundle.js",
+    "release": "npm version patch"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "bannerify": "^1.0.1",
+    "watchify": "^3.6.1"
+  }
 }
