--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"version": "npm run build && git add -A dist",
+	"version": "npm run build && git add -A",
 	"postversion": "git push && git push --tags",
     "build": "browserify index.js -p [bannerify --file ./banner.txt] > bundle.js",
     "release": "npm version patch"
