--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "version": "npm run build && git add -A",
     "postversion": "git push && git push --tags",
     "build": "browserify index.js -p [bannerify --file ./banner.txt] > bundle.js",
-    "release": "npm version patch"
+    "release": "npm version"
   },
   "author": "",
   "license": "ISC",
